# seminario

./: LICENSE  README.md  compose.yml
.devcontainer/backend/: devcontainer.json
.devcontainer/backoffice/: devcontainer.json
backend/: .gitignore  main.py  manage.py  pyproject.toml  requirements.txt  settings.py  start.py
backend/api/: admin.py  filters.py  models.py  serializers.py  service.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_contraoferta_duration_propuesta_duration.py  0002_user_contraoferta.py  0003_alter_contraoferta_duration_and_more.py  0003_remove_user_userid.py
backend/api/viewsets/: Calificacion.py  Clase.py  ContraOferta.py  Pago.py  Propuesta.py  Queja.py  Reseña.py  User.py  auth.py
backend/matchedBackend/: asgi.py  settings.py  urls.py  wsgi.py
backend/services/: clase_service.py
backoffice/: .gitignore  human-verification.tsx  middleware.ts  next.config.mjs  package-lock.json  package.json
backoffice/app/: clientLayout.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
backoffice/app/clases-publicadas/: page.tsx
backoffice/app/dashboard/: page.tsx
backoffice/app/historial-pagos/: page.tsx
backoffice/app/login/: page.tsx
backoffice/app/mis-ofertas/: page.tsx
backoffice/app/mis-publicaciones/: page.tsx
backoffice/app/oferta-clase/: page.tsx
backoffice/components/: PropuestasList.tsx  button.tsx  header.tsx  input-field.tsx  layout.tsx  star-rating.tsx  user-card.tsx
backoffice/hooks/: use-api.ts
tests/test_api/: test_views.py
tests/test_services/: test_clase_service.py
(+10 files in other folders)
