[tool.poetry]
name = "Seminario Backend"
version = "0.1.0"
description = "Backend Django Microservice Proyecto Seminario"
authors = ["Tiziano Musca"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
mysqlclient = "^2.1"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-django = "^4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
